--- a/flux-entropy-paper/references.bib
+++ b/flux-entropy-paper/references.bib
@@ -224,3 +224,11 @@
 	Title = {Using Event Based Markov Model Simulation to Analyze Interactive Human Behavior},
 	Url = {http://aisel.aisnet.org/amcis2007/142},
 	Year = {2007}}
+
+
+@inproceedings{Martin:2015jk,
+	Author = {Charles Martin and Henry Gardner and Ben Swift},
+	Booktitle = {Proc. NIME '15},
+	Title = {Tracking Ensemble Performance on Touch-Screens with Gesture Classification and Transition Matrices},
+	Year = {2015}
+ }
