new descriptive data table

--- a/flux-entropy-paper/flux-entropy-paper.tex
+++ b/flux-entropy-paper/flux-entropy-paper.tex
@@ -238,12 +238,12 @@ recorded sessions by context and type is shown in Figure
 \hline
             & Total & Min  & Median   & Max     \\ 
 \hline
-N           & 150       &         &        &  \\
+N           & 95    &      &          &         \\
 %Record size & 306MB     &         &        &   \\
-Length      & 20H34M22S & 1M0S    & 7M29S  & 26M0S\\
-Participants& 524       & 1       & 4      & 9    \\
-Flux        &           & 0.02239 & 0.1445 & 0.3246\\
-Entropy     &           &  &  & \\          
+Length & 13H9M19S & 1M19S & 7M26S & 22M20S \\
+Participants& 353   & 2    & 4        & 9        \\
+Flux &   & 0.02239 & 0.1445 & 0.3246\\
+Entropy &   & 0.7683 & 3.342 & 4.442\\          
 \hline
 \end{tabular}
 \caption{
